// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders Buttons of different size correctly 1`] = `
<div>
  <button
    class="zw-button zw-button--primary zw-button--xl zw-button--radius"
    type="button"
  >
    xl尺寸
  </button>
  <button
    class="zw-button zw-button--primary zw-button--lg zw-button--radius"
    type="button"
  >
    lg尺寸
  </button>
  <button
    class="zw-button zw-button--primary zw-button--radius"
    type="button"
  >
    默认尺寸
  </button>
  <button
    class="zw-button zw-button--primary zw-button--sm zw-button--radius"
    type="button"
  >
    sm尺寸
  </button>
  <button
    class="zw-button zw-button--primary zw-button--xs zw-button--radius"
    type="button"
  >
    xs尺寸
  </button>
</div>
`;

exports[`Button renders Buttons of different theme correctly 1`] = `
<div>
  <button
    class="zw-button zw-button--default zw-button--radius"
    type="button"
  >
    default
  </button>
  <button
    class="zw-button zw-button--primary zw-button--radius"
    type="button"
  >
    info
  </button>
  <button
    class="zw-button zw-button--success zw-button--radius"
    type="button"
  >
    success
  </button>
  <button
    class="zw-button zw-button--warning zw-button--radius"
    type="button"
  >
    warning
  </button>
  <button
    class="zw-button zw-button--error zw-button--radius"
    type="button"
  >
    error
  </button>
</div>
`;

exports[`Button renders Buttons with radius or round props correctly 1`] = `
<div>
  <div>
    <button
      class="zw-button zw-button--default zw-button--radius"
      type="button"
    >
      default
    </button>
    <button
      class="zw-button zw-button--primary zw-button--radius"
      type="button"
    >
      info
    </button>
    <button
      class="zw-button zw-button--success zw-button--radius"
      type="button"
    >
      success
    </button>
    <button
      class="zw-button zw-button--warning zw-button--radius"
      type="button"
    >
      warning
    </button>
    <button
      class="zw-button zw-button--danger zw-button--radius"
      type="button"
    >
      error
    </button>
  </div>
  <div>
    <button
      class="zw-button zw-button--default zw-button--round"
      type="button"
    >
      default
    </button>
    <button
      class="zw-button zw-button--primary zw-button--round"
      type="button"
    >
      info
    </button>
    <button
      class="zw-button zw-button--success zw-button--round"
      type="button"
    >
      success
    </button>
    <button
      class="zw-button zw-button--warning zw-button--round"
      type="button"
    >
      warning
    </button>
    <button
      class="zw-button zw-button--danger zw-button--round"
      type="button"
    >
      error
    </button>
  </div>
</div>
`;

exports[`Button renders anchor Button correctly 1`] = `
<a
  class="zw-button zw-button--primary zw-button--radius"
  href="https://www.baidu.com"
  target="_blank"
>
  百度一下
</a>
`;

exports[`Button renders disaled Button correctly 1`] = `
<div>
  <button
    class="zw-button zw-button--default zw-button--radius zw-button--disabled"
    disabled=""
    type="button"
  >
    default
  </button>
</div>
`;

exports[`Button renders loading Button correctly 1`] = `
<div>
  <button
    class="zw-button zw-button--info zw-button--radius zw-button--loading"
    type="button"
  >
    <i
      class="za-icon za-icon-loading theme-default rotate360"
    />
      加载中
  </button>
</div>
`;
